--- a/demo/src/app/components/dropdown/demos/config/dropdown-config.html
+++ b/demo/src/app/components/dropdown/demos/config/dropdown-config.html
@@ -1,6 +1,6 @@
 <p>This dropdown uses customized default values.</p>
 
-<div ngbDropdown>
+<div ngbDropdown container="body">
   <button class="btn btn-outline-primary" id="dropdownConfig" ngbDropdownToggle>Toggle</button>
   <div ngbDropdownMenu aria-labelledby="dropdownConfig">
     <button class="dropdown-item">Action - 1</button>
